--- a/views/form.html
+++ b/views/form.html
@@ -9,9 +9,12 @@
 <body>
     <h1>Hello World!!!</h1>
 
-    <form action="" method="POST">
+    <form id="form" action="" method="POST">
         <input type="text" name="text">
+        <input type="number" name="count">
         <input type="submit">
     </form>
+
+    <script src="/public/js/src/form.js"></script>
 </body>
 </html>
